--- a/todos/index.html
+++ b/todos/index.html
@@ -14,7 +14,7 @@
 			</div>
 			<div class="inputEvent">
 				Add event
-				<input type="text">
+				<input required type="text">
 			</div>
 			<button onclick="addEvent()">Add</button>
 		</div>
